Fixed the links hovered not centered, changed login for sign in, improved the login layout

--- a/styles/components/page/header.module.css
+++ b/styles/components/page/header.module.css
@@ -33,14 +33,18 @@
 }
 
 .navbar_links li a {
+    display: flex;
+    align-items: center;
+    text-align: center;
     text-decoration: none;
     color: var(--tertiary);
     padding: 0.5rem;
-    display: block;
+    /* display: block; */
 }
 
 .navbar_links li:hover {
     background-color: var(--secondary);
+    border-radius: 5px;
 }
 
 .navbar_links li:hover a {
