--- a/styles/signin.module.css
+++ b/styles/signin.module.css
@@ -25,12 +25,14 @@
 
 .loginImage {
     display: grid;
-    grid-template-rows: auto 30%;
+    grid-template-rows: auto 40%;
     width: 100%;
     place-items: center;
+    /* gap: 1rem; */
 }
 
 .loginButtons {
+    padding: 1rem;
     display: grid;
     place-content: center;
     gap: 1rem;
@@ -52,8 +54,6 @@
     }
 
     .loginImage {
-        display: grid;
-        grid-template-rows: auto 1fr;
         gap: 2rem;
     }
 }
